--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WiredShack">
-        <activity android:name=".dashboard.DashboardActivity"
+        <activity android:name=".eventManager.dashboard.DashboardEventManagerActivity"
             android:theme="@style/BaseTheme.one">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,15 +17,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".user.dashboard.DashboardActivity"
+            android:theme="@style/BaseTheme.one"/>
         <activity android:name=".ForgetPasswordActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".MainActivity">
-            <!--<intent-filter>
+
+            <!--
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </activity>
     </application>
 
