Complete All Designs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WiredShack">
-        <activity android:name=".eventManager.editEvent.ManagerEditEventActivity"></activity>
+        <activity android:name=".user.following.UserFollowingActivity"
+            android:theme="@style/BaseTheme.one" />
+        <activity
+            android:name=".eventManager.editEvent.ManagerEditEventActivity"
+            android:theme="@style/BaseTheme.one" />
         <activity
             android:name=".EditProfileActivity"
             android:theme="@style/BaseTheme.one" />
@@ -27,7 +31,13 @@
         </activity>
         <activity
             android:name=".user.dashboard.DashboardActivity"
-            android:theme="@style/BaseTheme.one"></activity>
+            android:theme="@style/BaseTheme.one" >
+            <!--<intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>-->
+        </activity>
         <activity android:name=".ForgetPasswordActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegistrationActivity" />
