--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jaylax.wiredshack">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+
     <application
+        android:name=".MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.WiredShack">
-        <activity android:name=".user.following.UserFollowingActivity"
+        android:theme="@style/BaseTheme.one"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".user.following.UserFollowingActivity"
             android:theme="@style/BaseTheme.one" />
         <activity
             android:name=".eventManager.editEvent.ManagerEditEventActivity"
@@ -23,15 +30,15 @@
         <activity
             android:name=".eventManager.dashboard.DashboardEventManagerActivity"
             android:theme="@style/BaseTheme.one">
-            <intent-filter>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
         <activity
             android:name=".user.dashboard.DashboardActivity"
-            android:theme="@style/BaseTheme.one" >
+            android:theme="@style/BaseTheme.one">
             <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -43,13 +50,11 @@
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".MainActivity">
 
-            <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            -->
         </activity>
     </application>
 
