--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
 
+    //LottieAnimation
+    implementation 'com.airbnb.android:lottie:3.4.0'
+
 }
