Event Details with api

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,8 @@ dependencies {
     //LottieAnimation
     implementation 'com.airbnb.android:lottie:3.4.0'
 
+    //Current location, Map, PlacePicker
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation 'com.google.android.libraries.places:places:2.4.0'
+
 }
