EditEvent Logic add

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
         android:name=".MyApp"
@@ -18,7 +20,10 @@
         android:supportsRtl="true"
         android:theme="@style/BaseTheme.one"
         android:usesCleartextTraffic="true">
-        <activity android:name=".eventManager.followed.ManagerFollowedActivity"
+        <activity android:name=".eventimage.EventImagesActivity"
+            android:theme="@style/BaseTheme.one" />
+        <activity
+            android:name=".eventManager.followed.ManagerFollowedActivity"
             android:theme="@style/BaseTheme.one" />
         <activity
             android:name=".user.wishlist.UserWishListActivity"
@@ -73,6 +78,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <!--
+             The API key for Google Maps-based APIs.
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_place_key" />
     </application>
 
 </manifest>
