--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,10 @@ android {
 }
 
 dependencies {
-
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.balysv:material-ripple:1.0.2'
@@ -83,6 +86,13 @@ dependencies {
 
     //PhotoView
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+
+    //LiveStream
+    implementation project(path: ':liveVideoBroadcasterSDK')
+
+
+    //Exoplayer
+    implementation 'com.google.android.exoplayer:exoplayer:r2.3.1'
 
 
 }
