--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
 
     <application
         android:name=".MyApp"
@@ -20,6 +22,15 @@
         android:supportsRtl="true"
         android:theme="@style/BaseTheme.one"
         android:usesCleartextTraffic="true">
+        <service android:name="io.antmedia.android.broadcaster.LiveVideoBroadcaster" />
+
+
+
+        <activity android:name=".user.liveVideoPlayer.LiveVideoPlayerActivity"
+            android:theme="@style/BaseTheme.one"             />
+        <activity
+            android:name=".eventManager.liveVideoBroadcaster.LiveVideoBroadcasterActivity"
+            android:theme="@style/BaseTheme.one" />
         <activity
             android:name=".user.upcoming.UpcomingEventActivity"
             android:configChanges="orientation"
