--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,5 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer:r2.3.1'
 
 
+    implementation 'com.github.BirjuVachhani:locus-android:3.2.0'
 }
