--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,8 @@ dependencies {
     //Exoplayer
     implementation 'com.google.android.exoplayer:exoplayer:r2.3.1'
 
-
     implementation 'com.github.BirjuVachhani:locus-android:3.2.0'
+
+    implementation "de.mrmaffen:vlc-android-sdk:2.0.6"
+
 }
