--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
             android:name=".LoginSignupActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize"
             android:theme="@style/BaseTheme.one" />
 
         <activity
@@ -89,12 +90,6 @@
             android:screenOrientation="portrait"
             android:theme="@style/BaseTheme.one" />
         <activity
-            android:name=".EditProfileActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait"
-            android:theme="@style/BaseTheme.one"
-            android:windowSoftInputMode="stateVisible|adjustResize" />
-        <activity
             android:name=".user.eventDetails.EventDetailsActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
@@ -133,16 +128,6 @@
             android:screenOrientation="portrait"
             android:theme="@style/BaseTheme.one"
             android:windowSoftInputMode="adjustResize" />
-        <activity
-            android:name=".LoginActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait"
-            android:theme="@style/BaseTheme.one" />
-        <activity
-            android:name=".RegistrationActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait"
-            android:theme="@style/BaseTheme.one" />
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation"
