--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,13 +33,16 @@
         android:supportsRtl="true"
         android:theme="@style/BaseTheme.one"
         android:usesCleartextTraffic="true">
+        <activity android:name=".WebViewActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
+            android:theme="@style/BaseTheme.one"/>
         <activity
             android:name=".LoginSignupActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"
-            android:theme="@style/BaseTheme.one" />
-
+            android:theme="@style/BaseTheme.one"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".eventManager.assignEvent.AssignEventActivity"
             android:configChanges="orientation"
@@ -146,10 +149,9 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_place_key" />
-
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"/>
-
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
     </application>
 
 </manifest>
