--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
 
     //ImagePicker
     implementation 'com.github.dhaval2404:imagepicker:1.7.1'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:27.1.0')
